# nomad-oasis-inl

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
configs/: nginx_http.conf  nginx_https.conf  nomad.yaml
nomad/: jupyterhub_config.py
scripts/: backup-files.sh  backup-mongo.sh  patch_nomad_north_start_tool.py
ssl/: selfsigned.crt  selfsigned.key
tests/: docker-compose.yml  nomad.yaml
