[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[infrastructure]>=1.4.1"]


[project.urls]
repository = "https://github.com/garzondiegofeup/nomad-oasis-inl"

[project.optional-dependencies]
# Add your plugins to the list below.
plugins = [
 "nomad-north-jupyter>=0.2.1",
 "nomad-material-processing>=1.0.0", 
 "nomad-baseclasses @ git+https://github.com/nomad-hzb/nomad-baseclasses.git",
 "nomad-measurements>=1.3.0",
 "nomad-inl-base @ git+https://github.com/GarzonDiegoFEUP/nomad-inl-base.git",
  ]
jupyter = ["jupyter-events"]
gpu-action = []
cpu-action = []

dev = ["nomad-lab[infrastructure, dev]"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
prerelease = "explicit"
constraint-dependencies = [
  "flatdict>=4.1.0",
  # Pin requests and its dependencies to mutually compatible versions.
  # requests declares chardet<6, charset-normalizer<4, and urllib3<3 as supported;
  # without these caps uv resolves chardet 7.x / urllib3 2.6+ which triggers
  # RequestsDependencyWarning and can crash the nomad app at startup.
  "requests>=2.31.0",
  "urllib3>=1.21.1,<3",
  "charset-normalizer>=2,<4",
  "chardet>=3.0.2,<6",
]

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
