[build-system]
requires = ["setuptools>=82.0.1", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[infrastructure]>=1.4.1"]


[project.urls]
repository = "https://github.com/garzondiegofeup/nomad-oasis-inl"

[project.optional-dependencies]
# Add your plugins to the list below.
plugins = [
 "nomad-north-jupyter>=0.2.1",
 "nomad-material-processing>=1.0.0",
 "nomad-measurements>=1.3.0",
 "nomad-inl-base @ git+https://github.com/GarzonDiegoFEUP/nomad-inl-base.git",
  ]
jupyter = ["jupyter-events"]
gpu-action = []
cpu-action = []

dev = ["nomad-lab[infrastructure, dev]"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
prerelease = "explicit"
constraint-dependencies = [
  "flatdict>=4.1.0",
  # nomad-lab 1.4.1 patches optimade.server.logger with nomad.app.optimade_logger
  # which only exports LOGGER (not get_logger). optimade>=1.3.0 switched from
  # mongomock to real pymongo for ENTRY_COLLECTIONS which hangs at import time
  # before infrastructure.setup() connects MongoDB. optimade 1.2.x uses mongomock
  # (in-memory) so neither issue applies. The upstream nomad-distro-template
  # also resolves to 1.2.4. Pin here to stay compatible.
  "optimade<1.3.0",
  # h5grove 3.0.0 (2026-02-16) changed open_file_with_error_fallback to use
  # @contextmanager, making it a closure with 1 free var. nomad 1.4.1's
  # h5grove_app.py replaces __code__ on that function, which fails with
  # ValueError when the free-var counts don't match. Pin to <3.0.0 until
  # nomad fixes the monkey-patch to use functools.wraps or direct assignment.
  "h5grove<3.0.0",
  # starlette 1.0.0 (2026-03-22) removed on_startup/on_shutdown attributes from
  # starlette.routing.Router. optimade 1.2.x uses a bare Router (not APIRouter)
  # in optimade.server.routers.landing, and fastapi's include_router() still
  # accesses router.on_startup, raising AttributeError on startup. Pin to
  # <1.0.0 until optimade or fastapi fixes the incompatibility.
  "starlette<1.0.0",
]

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
